# Clotho-Simulation-Engine

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
core/analysis/: trace_analyzer.py
core/chaos/: chaos_matrix.py  coverage_tracker.py  fuzzer.py  reliability_scorer.py
core/engine/: clotho_parser.py  clotho_simulator.py  expression_engine.py  expression_grammar.lark  static_analyzer.py
examples/: comprehensive_banking.yaml  demo_m6_vulnerability_banking.yaml  modern_banking_system.yaml  multiplayer_game_system.yaml  run_banking_demo.py  test_banking_scenario.yaml
tests/: test_hardening.py
tests/clotho_examples/: invalid_structure.yaml  test_clotho_parsing.py  test_correctness_rules.yaml  test_design_topology.yaml  test_run_evolution.yaml  test_types_and_constraints.yaml  valid_basic.yaml  valid_complex_expressions.yaml
tests/part1_core/: test_clotho_parser.py  test_clotho_simulator_core.py  test_simulator_basics.py
tests/part2_types/: test_expression_engine.py  test_expression_security.py  test_fuzzer.py
tests/part3_correctness/: ltl_scenario.yaml  test_ltl_engine.py
tests/part4_evolution/: fault_injection_scenario.yaml  race_condition_scenario.yaml  test_causation_tracking.py  test_chaos_matrix.py  test_determinism.py  test_fault_injection.py  test_full_determinism.py  test_parallel_determinism.py  test_quick_parallel.py  test_race_condition.py  test_randomized_scheduling.py  test_reproducibility.py  test_simple_determinism.py  test_simulator_integration.py
